src/parser.output
Terminals unused in grammar

   ETOK


Grammar

    0 $accept: program $end

    1 program: decl_block code_block

    2 decl_block: declblock '{' declaration_list '}'

    3 code_block: codeblock '{' statement_list '}'

    4 declaration_list: decl_stmt ';' declaration_list
    5                 | %empty

    6 decl_stmt: TYPE expr

    7 expr: variables ',' expr
    8     | variables

    9 variables: IDENTIFIER '[' VALUE ']'
   10          | IDENTIFIER

   11 statement_list: forloop statement_list
   12               | whileloop statement_list
   13               | gotoloop ';' statement_list
   14               | condition statement_list
   15               | IDENTIFIER ':' statement_list
   16               | print ';' statement_list
   17               | read ';' statement_list
   18               | stmt ';' statement_list
   19               | %empty

   20 stmt: VARIABLE '=' stmt
   21     | expression

   22 VARIABLE: IDENTIFIER
   23         | IDENTIFIER '[' expression ']'

   24 VALUE: DIGIT
   25      | NUMBER

   26 condition: IF boolexpression '{' statement_list '}' ELSE '{' statement_list '}'
   27          | IF boolexpression '{' statement_list '}'

   28 whileloop: WHILE boolexpression '{' statement_list '}'

   29 forloop: FOR VARIABLE '=' expression ',' expression ',' expression '{' statement_list '}'
   30        | FOR VARIABLE '=' expression ',' expression '{' statement_list '}'

   31 gotoloop: GOTO IDENTIFIER
   32         | GOTO IDENTIFIER IF boolexpression

   33 read: READ readvars

   34 readvars: readvars ',' VARIABLE
   35         | VARIABLE

   36 print: PRINT printstmt
   37      | PRINTLN printstmt

   38 printstmt: printstmt ',' prt
   39          | prt

   40 prt: TEXT
   41    | expression

   42 boolexpression: expression LOGOR expression
   43               | expression LOGAND expression
   44               | expression LOGEQ expression
   45               | expression NOTEQ expression
   46               | expression GEQ expression
   47               | expression '>' expression
   48               | expression LEQ expression
   49               | expression '<' expression
   50               | '(' boolexpression ')'

   51 expression: expression '|' expression
   52           | expression '^' expression
   53           | expression '&' expression
   54           | expression '-' expression
   55           | expression '+' expression
   56           | expression '%' expression
   57           | expression '/' expression
   58           | expression '*' expression
   59           | '(' expression ')'
   60           | VARIABLE
   61           | VALUE


Terminals, with rules where they appear

$end (0) 0
'%' (37) 56
'&' (38) 53
'(' (40) 50 59
')' (41) 50 59
'*' (42) 58
'+' (43) 55
',' (44) 7 29 30 34 38
'-' (45) 54
'/' (47) 57
':' (58) 15
';' (59) 4 13 16 17 18
'<' (60) 49
'=' (61) 20 29 30
'>' (62) 47
'[' (91) 9 23
']' (93) 9 23
'^' (94) 52
'{' (123) 2 3 26 27 28 29 30
'|' (124) 51
'}' (125) 2 3 26 27 28 29 30
error (256)
declblock (258) 2
codeblock (259) 3
DIGIT (260) 24
NUMBER (261) 25
IDENTIFIER (262) 9 10 15 22 23 31 32
ETOK (263)
TYPE (264) 6
TEXT (265) 40
IF (266) 26 27 32
ELSE (267) 26
WHILE (268) 28
FOR (269) 29 30
GOTO (270) 31 32
PRINT (271) 36
PRINTLN (272) 37
READ (273) 33
LOGEQ (274) 44
LOGOR (275) 42
LEQ (276) 48
NOTEQ (277) 45
GEQ (278) 46
LOGAND (279) 43


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
decl_block (47)
    on left: 2, on right: 1
code_block (48)
    on left: 3, on right: 1
declaration_list (49)
    on left: 4 5, on right: 2 4
decl_stmt (50)
    on left: 6, on right: 4
expr (51)
    on left: 7 8, on right: 6 7
variables (52)
    on left: 9 10, on right: 7 8
statement_list (53)
    on left: 11 12 13 14 15 16 17 18 19, on right: 3 11 12 13 14 15
    16 17 18 26 27 28 29 30
stmt (54)
    on left: 20 21, on right: 18 20
VARIABLE (55)
    on left: 22 23, on right: 20 29 30 34 35 60
VALUE (56)
    on left: 24 25, on right: 9 61
condition (57)
    on left: 26 27, on right: 14
whileloop (58)
    on left: 28, on right: 12
forloop (59)
    on left: 29 30, on right: 11
gotoloop (60)
    on left: 31 32, on right: 13
read (61)
    on left: 33, on right: 17
readvars (62)
    on left: 34 35, on right: 33 34
print (63)
    on left: 36 37, on right: 16
printstmt (64)
    on left: 38 39, on right: 36 37 38
prt (65)
    on left: 40 41, on right: 38 39
boolexpression (66)
    on left: 42 43 44 45 46 47 48 49 50, on right: 26 27 28 32 50
expression (67)
    on left: 51 52 53 54 55 56 57 58 59 60 61, on right: 21 23 29 30
    41 42 43 44 45 46 47 48 49 51 52 53 54 55 56 57 58 59


State 0

    0 $accept: . program $end

    declblock  shift, and go to state 1

    program     go to state 2
    decl_block  go to state 3


State 1

    2 decl_block: declblock . '{' declaration_list '}'

    '{'  shift, and go to state 4


State 2

    0 $accept: program . $end

    $end  shift, and go to state 5


State 3

    1 program: decl_block . code_block

    codeblock  shift, and go to state 6

    code_block  go to state 7


State 4

    2 decl_block: declblock '{' . declaration_list '}'

    TYPE  shift, and go to state 8

    $default  reduce using rule 5 (declaration_list)

    declaration_list  go to state 9
    decl_stmt         go to state 10


State 5

    0 $accept: program $end .

    $default  accept


State 6

    3 code_block: codeblock . '{' statement_list '}'

    '{'  shift, and go to state 11


State 7

    1 program: decl_block code_block .

    $default  reduce using rule 1 (program)


State 8

    6 decl_stmt: TYPE . expr

    IDENTIFIER  shift, and go to state 12

    expr       go to state 13
    variables  go to state 14


State 9

    2 decl_block: declblock '{' declaration_list . '}'

    '}'  shift, and go to state 15


State 10

    4 declaration_list: decl_stmt . ';' declaration_list

    ';'  shift, and go to state 16


State 11

    3 code_block: codeblock '{' . statement_list '}'

    DIGIT       shift, and go to state 17
    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 19
    IF          shift, and go to state 20
    WHILE       shift, and go to state 21
    FOR         shift, and go to state 22
    GOTO        shift, and go to state 23
    PRINT       shift, and go to state 24
    PRINTLN     shift, and go to state 25
    READ        shift, and go to state 26
    '('         shift, and go to state 27

    $default  reduce using rule 19 (statement_list)

    statement_list  go to state 28
    stmt            go to state 29
    VARIABLE        go to state 30
    VALUE           go to state 31
    condition       go to state 32
    whileloop       go to state 33
    forloop         go to state 34
    gotoloop        go to state 35
    read            go to state 36
    print           go to state 37
    expression      go to state 38


State 12

    9 variables: IDENTIFIER . '[' VALUE ']'
   10          | IDENTIFIER .

    '['  shift, and go to state 39

    $default  reduce using rule 10 (variables)


State 13

    6 decl_stmt: TYPE expr .

    $default  reduce using rule 6 (decl_stmt)


State 14

    7 expr: variables . ',' expr
    8     | variables .

    ','  shift, and go to state 40

    $default  reduce using rule 8 (expr)


State 15

    2 decl_block: declblock '{' declaration_list '}' .

    $default  reduce using rule 2 (decl_block)


State 16

    4 declaration_list: decl_stmt ';' . declaration_list

    TYPE  shift, and go to state 8

    $default  reduce using rule 5 (declaration_list)

    declaration_list  go to state 41
    decl_stmt         go to state 10


State 17

   24 VALUE: DIGIT .

    $default  reduce using rule 24 (VALUE)


State 18

   25 VALUE: NUMBER .

    $default  reduce using rule 25 (VALUE)


State 19

   15 statement_list: IDENTIFIER . ':' statement_list
   22 VARIABLE: IDENTIFIER .
   23         | IDENTIFIER . '[' expression ']'

    '['  shift, and go to state 42
    ':'  shift, and go to state 43

    $default  reduce using rule 22 (VARIABLE)


State 20

   26 condition: IF . boolexpression '{' statement_list '}' ELSE '{' statement_list '}'
   27          | IF . boolexpression '{' statement_list '}'

    DIGIT       shift, and go to state 17
    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 44
    '('         shift, and go to state 45

    VARIABLE        go to state 46
    VALUE           go to state 31
    boolexpression  go to state 47
    expression      go to state 48


State 21

   28 whileloop: WHILE . boolexpression '{' statement_list '}'

    DIGIT       shift, and go to state 17
    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 44
    '('         shift, and go to state 45

    VARIABLE        go to state 46
    VALUE           go to state 31
    boolexpression  go to state 49
    expression      go to state 48


State 22

   29 forloop: FOR . VARIABLE '=' expression ',' expression ',' expression '{' statement_list '}'
   30        | FOR . VARIABLE '=' expression ',' expression '{' statement_list '}'

    IDENTIFIER  shift, and go to state 44

    VARIABLE  go to state 50


State 23

   31 gotoloop: GOTO . IDENTIFIER
   32         | GOTO . IDENTIFIER IF boolexpression

    IDENTIFIER  shift, and go to state 51


State 24

   36 print: PRINT . printstmt

    DIGIT       shift, and go to state 17
    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 44
    TEXT        shift, and go to state 52
    '('         shift, and go to state 27

    VARIABLE    go to state 46
    VALUE       go to state 31
    printstmt   go to state 53
    prt         go to state 54
    expression  go to state 55


State 25

   37 print: PRINTLN . printstmt

    DIGIT       shift, and go to state 17
    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 44
    TEXT        shift, and go to state 52
    '('         shift, and go to state 27

    VARIABLE    go to state 46
    VALUE       go to state 31
    printstmt   go to state 56
    prt         go to state 54
    expression  go to state 55


State 26

   33 read: READ . readvars

    IDENTIFIER  shift, and go to state 44

    VARIABLE  go to state 57
    readvars  go to state 58


State 27

   59 expression: '(' . expression ')'

    DIGIT       shift, and go to state 17
    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 44
    '('         shift, and go to state 27

    VARIABLE    go to state 46
    VALUE       go to state 31
    expression  go to state 59


State 28

    3 code_block: codeblock '{' statement_list . '}'

    '}'  shift, and go to state 60


State 29

   18 statement_list: stmt . ';' statement_list

    ';'  shift, and go to state 61


State 30

   20 stmt: VARIABLE . '=' stmt
   60 expression: VARIABLE .

    '='  shift, and go to state 62

    $default  reduce using rule 60 (expression)


State 31

   61 expression: VALUE .

    $default  reduce using rule 61 (expression)


State 32

   14 statement_list: condition . statement_list

    DIGIT       shift, and go to state 17
    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 19
    IF          shift, and go to state 20
    WHILE       shift, and go to state 21
    FOR         shift, and go to state 22
    GOTO        shift, and go to state 23
    PRINT       shift, and go to state 24
    PRINTLN     shift, and go to state 25
    READ        shift, and go to state 26
    '('         shift, and go to state 27

    $default  reduce using rule 19 (statement_list)

    statement_list  go to state 63
    stmt            go to state 29
    VARIABLE        go to state 30
    VALUE           go to state 31
    condition       go to state 32
    whileloop       go to state 33
    forloop         go to state 34
    gotoloop        go to state 35
    read            go to state 36
    print           go to state 37
    expression      go to state 38


State 33

   12 statement_list: whileloop . statement_list

    DIGIT       shift, and go to state 17
    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 19
    IF          shift, and go to state 20
    WHILE       shift, and go to state 21
    FOR         shift, and go to state 22
    GOTO        shift, and go to state 23
    PRINT       shift, and go to state 24
    PRINTLN     shift, and go to state 25
    READ        shift, and go to state 26
    '('         shift, and go to state 27

    $default  reduce using rule 19 (statement_list)

    statement_list  go to state 64
    stmt            go to state 29
    VARIABLE        go to state 30
    VALUE           go to state 31
    condition       go to state 32
    whileloop       go to state 33
    forloop         go to state 34
    gotoloop        go to state 35
    read            go to state 36
    print           go to state 37
    expression      go to state 38


State 34

   11 statement_list: forloop . statement_list

    DIGIT       shift, and go to state 17
    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 19
    IF          shift, and go to state 20
    WHILE       shift, and go to state 21
    FOR         shift, and go to state 22
    GOTO        shift, and go to state 23
    PRINT       shift, and go to state 24
    PRINTLN     shift, and go to state 25
    READ        shift, and go to state 26
    '('         shift, and go to state 27

    $default  reduce using rule 19 (statement_list)

    statement_list  go to state 65
    stmt            go to state 29
    VARIABLE        go to state 30
    VALUE           go to state 31
    condition       go to state 32
    whileloop       go to state 33
    forloop         go to state 34
    gotoloop        go to state 35
    read            go to state 36
    print           go to state 37
    expression      go to state 38


State 35

   13 statement_list: gotoloop . ';' statement_list

    ';'  shift, and go to state 66


State 36

   17 statement_list: read . ';' statement_list

    ';'  shift, and go to state 67


State 37

   16 statement_list: print . ';' statement_list

    ';'  shift, and go to state 68


State 38

   21 stmt: expression .
   51 expression: expression . '|' expression
   52           | expression . '^' expression
   53           | expression . '&' expression
   54           | expression . '-' expression
   55           | expression . '+' expression
   56           | expression . '%' expression
   57           | expression . '/' expression
   58           | expression . '*' expression

    '|'  shift, and go to state 69
    '^'  shift, and go to state 70
    '&'  shift, and go to state 71
    '-'  shift, and go to state 72
    '+'  shift, and go to state 73
    '%'  shift, and go to state 74
    '/'  shift, and go to state 75
    '*'  shift, and go to state 76

    $default  reduce using rule 21 (stmt)


State 39

    9 variables: IDENTIFIER '[' . VALUE ']'

    DIGIT   shift, and go to state 17
    NUMBER  shift, and go to state 18

    VALUE  go to state 77


State 40

    7 expr: variables ',' . expr

    IDENTIFIER  shift, and go to state 12

    expr       go to state 78
    variables  go to state 14


State 41

    4 declaration_list: decl_stmt ';' declaration_list .

    $default  reduce using rule 4 (declaration_list)


State 42

   23 VARIABLE: IDENTIFIER '[' . expression ']'

    DIGIT       shift, and go to state 17
    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 44
    '('         shift, and go to state 27

    VARIABLE    go to state 46
    VALUE       go to state 31
    expression  go to state 79


State 43

   15 statement_list: IDENTIFIER ':' . statement_list

    DIGIT       shift, and go to state 17
    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 19
    IF          shift, and go to state 20
    WHILE       shift, and go to state 21
    FOR         shift, and go to state 22
    GOTO        shift, and go to state 23
    PRINT       shift, and go to state 24
    PRINTLN     shift, and go to state 25
    READ        shift, and go to state 26
    '('         shift, and go to state 27

    $default  reduce using rule 19 (statement_list)

    statement_list  go to state 80
    stmt            go to state 29
    VARIABLE        go to state 30
    VALUE           go to state 31
    condition       go to state 32
    whileloop       go to state 33
    forloop         go to state 34
    gotoloop        go to state 35
    read            go to state 36
    print           go to state 37
    expression      go to state 38


State 44

   22 VARIABLE: IDENTIFIER .
   23         | IDENTIFIER . '[' expression ']'

    '['  shift, and go to state 42

    $default  reduce using rule 22 (VARIABLE)


State 45

   50 boolexpression: '(' . boolexpression ')'
   59 expression: '(' . expression ')'

    DIGIT       shift, and go to state 17
    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 44
    '('         shift, and go to state 45

    VARIABLE        go to state 46
    VALUE           go to state 31
    boolexpression  go to state 81
    expression      go to state 82


State 46

   60 expression: VARIABLE .

    $default  reduce using rule 60 (expression)


State 47

   26 condition: IF boolexpression . '{' statement_list '}' ELSE '{' statement_list '}'
   27          | IF boolexpression . '{' statement_list '}'

    '{'  shift, and go to state 83


State 48

   42 boolexpression: expression . LOGOR expression
   43               | expression . LOGAND expression
   44               | expression . LOGEQ expression
   45               | expression . NOTEQ expression
   46               | expression . GEQ expression
   47               | expression . '>' expression
   48               | expression . LEQ expression
   49               | expression . '<' expression
   51 expression: expression . '|' expression
   52           | expression . '^' expression
   53           | expression . '&' expression
   54           | expression . '-' expression
   55           | expression . '+' expression
   56           | expression . '%' expression
   57           | expression . '/' expression
   58           | expression . '*' expression

    LOGEQ   shift, and go to state 84
    LOGOR   shift, and go to state 85
    LEQ     shift, and go to state 86
    NOTEQ   shift, and go to state 87
    GEQ     shift, and go to state 88
    LOGAND  shift, and go to state 89
    '|'     shift, and go to state 69
    '^'     shift, and go to state 70
    '&'     shift, and go to state 71
    '>'     shift, and go to state 90
    '<'     shift, and go to state 91
    '-'     shift, and go to state 72
    '+'     shift, and go to state 73
    '%'     shift, and go to state 74
    '/'     shift, and go to state 75
    '*'     shift, and go to state 76


State 49

   28 whileloop: WHILE boolexpression . '{' statement_list '}'

    '{'  shift, and go to state 92


State 50

   29 forloop: FOR VARIABLE . '=' expression ',' expression ',' expression '{' statement_list '}'
   30        | FOR VARIABLE . '=' expression ',' expression '{' statement_list '}'

    '='  shift, and go to state 93


State 51

   31 gotoloop: GOTO IDENTIFIER .
   32         | GOTO IDENTIFIER . IF boolexpression

    IF  shift, and go to state 94

    $default  reduce using rule 31 (gotoloop)


State 52

   40 prt: TEXT .

    $default  reduce using rule 40 (prt)


State 53

   36 print: PRINT printstmt .
   38 printstmt: printstmt . ',' prt

    ','  shift, and go to state 95

    $default  reduce using rule 36 (print)


State 54

   39 printstmt: prt .

    $default  reduce using rule 39 (printstmt)


State 55

   41 prt: expression .
   51 expression: expression . '|' expression
   52           | expression . '^' expression
   53           | expression . '&' expression
   54           | expression . '-' expression
   55           | expression . '+' expression
   56           | expression . '%' expression
   57           | expression . '/' expression
   58           | expression . '*' expression

    '|'  shift, and go to state 69
    '^'  shift, and go to state 70
    '&'  shift, and go to state 71
    '-'  shift, and go to state 72
    '+'  shift, and go to state 73
    '%'  shift, and go to state 74
    '/'  shift, and go to state 75
    '*'  shift, and go to state 76

    $default  reduce using rule 41 (prt)


State 56

   37 print: PRINTLN printstmt .
   38 printstmt: printstmt . ',' prt

    ','  shift, and go to state 95

    $default  reduce using rule 37 (print)


State 57

   35 readvars: VARIABLE .

    $default  reduce using rule 35 (readvars)


State 58

   33 read: READ readvars .
   34 readvars: readvars . ',' VARIABLE

    ','  shift, and go to state 96

    $default  reduce using rule 33 (read)


State 59

   51 expression: expression . '|' expression
   52           | expression . '^' expression
   53           | expression . '&' expression
   54           | expression . '-' expression
   55           | expression . '+' expression
   56           | expression . '%' expression
   57           | expression . '/' expression
   58           | expression . '*' expression
   59           | '(' expression . ')'

    '|'  shift, and go to state 69
    '^'  shift, and go to state 70
    '&'  shift, and go to state 71
    '-'  shift, and go to state 72
    '+'  shift, and go to state 73
    '%'  shift, and go to state 74
    '/'  shift, and go to state 75
    '*'  shift, and go to state 76
    ')'  shift, and go to state 97


State 60

    3 code_block: codeblock '{' statement_list '}' .

    $default  reduce using rule 3 (code_block)


State 61

   18 statement_list: stmt ';' . statement_list

    DIGIT       shift, and go to state 17
    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 19
    IF          shift, and go to state 20
    WHILE       shift, and go to state 21
    FOR         shift, and go to state 22
    GOTO        shift, and go to state 23
    PRINT       shift, and go to state 24
    PRINTLN     shift, and go to state 25
    READ        shift, and go to state 26
    '('         shift, and go to state 27

    $default  reduce using rule 19 (statement_list)

    statement_list  go to state 98
    stmt            go to state 29
    VARIABLE        go to state 30
    VALUE           go to state 31
    condition       go to state 32
    whileloop       go to state 33
    forloop         go to state 34
    gotoloop        go to state 35
    read            go to state 36
    print           go to state 37
    expression      go to state 38


State 62

   20 stmt: VARIABLE '=' . stmt

    DIGIT       shift, and go to state 17
    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 44
    '('         shift, and go to state 27

    stmt        go to state 99
    VARIABLE    go to state 30
    VALUE       go to state 31
    expression  go to state 38


State 63

   14 statement_list: condition statement_list .

    $default  reduce using rule 14 (statement_list)


State 64

   12 statement_list: whileloop statement_list .

    $default  reduce using rule 12 (statement_list)


State 65

   11 statement_list: forloop statement_list .

    $default  reduce using rule 11 (statement_list)


State 66

   13 statement_list: gotoloop ';' . statement_list

    DIGIT       shift, and go to state 17
    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 19
    IF          shift, and go to state 20
    WHILE       shift, and go to state 21
    FOR         shift, and go to state 22
    GOTO        shift, and go to state 23
    PRINT       shift, and go to state 24
    PRINTLN     shift, and go to state 25
    READ        shift, and go to state 26
    '('         shift, and go to state 27

    $default  reduce using rule 19 (statement_list)

    statement_list  go to state 100
    stmt            go to state 29
    VARIABLE        go to state 30
    VALUE           go to state 31
    condition       go to state 32
    whileloop       go to state 33
    forloop         go to state 34
    gotoloop        go to state 35
    read            go to state 36
    print           go to state 37
    expression      go to state 38


State 67

   17 statement_list: read ';' . statement_list

    DIGIT       shift, and go to state 17
    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 19
    IF          shift, and go to state 20
    WHILE       shift, and go to state 21
    FOR         shift, and go to state 22
    GOTO        shift, and go to state 23
    PRINT       shift, and go to state 24
    PRINTLN     shift, and go to state 25
    READ        shift, and go to state 26
    '('         shift, and go to state 27

    $default  reduce using rule 19 (statement_list)

    statement_list  go to state 101
    stmt            go to state 29
    VARIABLE        go to state 30
    VALUE           go to state 31
    condition       go to state 32
    whileloop       go to state 33
    forloop         go to state 34
    gotoloop        go to state 35
    read            go to state 36
    print           go to state 37
    expression      go to state 38


State 68

   16 statement_list: print ';' . statement_list

    DIGIT       shift, and go to state 17
    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 19
    IF          shift, and go to state 20
    WHILE       shift, and go to state 21
    FOR         shift, and go to state 22
    GOTO        shift, and go to state 23
    PRINT       shift, and go to state 24
    PRINTLN     shift, and go to state 25
    READ        shift, and go to state 26
    '('         shift, and go to state 27

    $default  reduce using rule 19 (statement_list)

    statement_list  go to state 102
    stmt            go to state 29
    VARIABLE        go to state 30
    VALUE           go to state 31
    condition       go to state 32
    whileloop       go to state 33
    forloop         go to state 34
    gotoloop        go to state 35
    read            go to state 36
    print           go to state 37
    expression      go to state 38


State 69

   51 expression: expression '|' . expression

    DIGIT       shift, and go to state 17
    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 44
    '('         shift, and go to state 27

    VARIABLE    go to state 46
    VALUE       go to state 31
    expression  go to state 103


State 70

   52 expression: expression '^' . expression

    DIGIT       shift, and go to state 17
    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 44
    '('         shift, and go to state 27

    VARIABLE    go to state 46
    VALUE       go to state 31
    expression  go to state 104


State 71

   53 expression: expression '&' . expression

    DIGIT       shift, and go to state 17
    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 44
    '('         shift, and go to state 27

    VARIABLE    go to state 46
    VALUE       go to state 31
    expression  go to state 105


State 72

   54 expression: expression '-' . expression

    DIGIT       shift, and go to state 17
    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 44
    '('         shift, and go to state 27

    VARIABLE    go to state 46
    VALUE       go to state 31
    expression  go to state 106


State 73

   55 expression: expression '+' . expression

    DIGIT       shift, and go to state 17
    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 44
    '('         shift, and go to state 27

    VARIABLE    go to state 46
    VALUE       go to state 31
    expression  go to state 107


State 74

   56 expression: expression '%' . expression

    DIGIT       shift, and go to state 17
    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 44
    '('         shift, and go to state 27

    VARIABLE    go to state 46
    VALUE       go to state 31
    expression  go to state 108


State 75

   57 expression: expression '/' . expression

    DIGIT       shift, and go to state 17
    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 44
    '('         shift, and go to state 27

    VARIABLE    go to state 46
    VALUE       go to state 31
    expression  go to state 109


State 76

   58 expression: expression '*' . expression

    DIGIT       shift, and go to state 17
    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 44
    '('         shift, and go to state 27

    VARIABLE    go to state 46
    VALUE       go to state 31
    expression  go to state 110


State 77

    9 variables: IDENTIFIER '[' VALUE . ']'

    ']'  shift, and go to state 111


State 78
